k8s/payment-service.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: payment-service

spec:
  replicas: 1

  selector:
    matchLabels:
      app: payment-service

  template:
    metadata:
      labels:
        app: payment-service

    spec:
      containers:
        - name: payment-service
          image: payment-service:2.4
          imagePullPolicy: Never

          ports:
            - containerPort: 8080

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080

            initialDelaySeconds: 30
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080

            initialDelaySeconds: 10
            periodSeconds: 5

---
apiVersion: v1
kind: Service

metadata:
  name: payment-service-service

spec:
  selector:
    app: payment-service

  ports:
    - port: 8080
      targetPort: 8080

  type: ClusterIP
