k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: payment-service-ingress

spec:
  ingressClassName: traefik

  rules:
    - host: payment.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: payment-service

                port:
                  number: 8080
